styles.css
/*****************************************************        CSS DEFAULTS     */
* {
    margin:0px;
    padding:0px;
    border:0px;
}

html {
    background-color: #e0e6eb;
    font-family: 'Raleway', sans-serif;
    font-weight:300;
}


/*****************************************************        GENERAL STYLES     */
.clear { 
    clear:both; 
} 

.clear-left {
    clear:left;
}

.right {
    float:right;
}

.left { 
    float: left; 
}

.aligned {
    text-align: center;
}

.leftalign {
    text-align: left;
}

.inlined {
    display: inline-block;
}

.blocked {
    display:block;
}

.centered {
    margin: 0 auto;
}

.inherits {
    width:inherit;
    padding:inherit;
}

.no-decoration {
    text-decoration: none;
}

ul {
    list-style: none;
}

[ng-click],
[data-ng-click],
[x-ng-click] {
    cursor: pointer;
}

/*****************************************************        Font-Sizes     */
.giga {
    font-size: 5.5em;
}

.mega {
    font-size:5em;
}

h1 {
    font-size: 4em;
    color: #1d84b5;
    font-family: 'Varela Round';
}

h2 {
    font-size:3em;
}

h3 {
    font-size:2em;
}

h4 {
    font-size:1.8em;
}

h5 {
    font-size:1.6em;
}

h6 {
    font-size:1.4em;
}

p {
    font-size:1em;
}
/*****************************************************        NAV     */
.navbar {
    background-color: #fff;
    position: fixed;
    display: block;
    margin: 0 auto;
    padding: 1em 0;
    width: 100%;
    z-index: 1000;
}

.navstyle {
    display:inline-block;
    padding: 0 .9em;

}

.nav-name {
    font-family: 'Varela Round', sans-serif;

}
.icon {
    width: 2em;
}

/*****************************************************        RECURRING STYLES     */
section {
    padding:7rem 0;
    color:#828282;
    margin: 0 0 3em 0;
    clear:both;
}

.product-img {
    margin:3rem 0;
    border-radius:5px;
}

.product {
    padding: 3rem 0;
}

.product-title {
    font-size:3em;
    font-weight:600;
    font-family: 'Varela Round', sans-serif;
}

.product-description {
    font-size:1.6em;
}

.thin {
    font-weight:300;
}
.normal {
    font-weight: 400;
}
.medium {
    font-weight:600;
}
.thick {
    font-weight: 800;
}

/*****************************************************        CONTENT SECTION     */
#content {
    color: #828282;
    padding: 9em 0 0em 0;
    margin: 0 0;
}

.main-text {
    margin: 0 auto;
}

.invis {
    color: #efefef;
}

.invis:hover {
    color: #828282;
    font-weight:300;
}

.subtitle {
    font-weight: 400;
}

.contact {
    margin-top:5em;
}

.contact-logo {
    padding: 0 1em;
}

.works {
    text-align: center;
}

.work-logo {
    padding:3em 2em 3em 2em;
}
/*****************************************************        DESIGNWORKS     */
#dwsite {
    padding-top:4em;
}

.site-section {
    background-color: white;
    border-radius:5px;
    margin:0 auto;
}

/*****************************************************        Footer        */
footer a{
    text-decoration: none;
}
footer h6 {
    bottom:0;
    padding:1em;
    background-color: #fff;
}

/*****************************************************        Colors+Borders     */
.red {color: #C23C15;}
.blue {color: #1d84b5;}
.purple {color: #8916CC;}
.orange {color: #ff9f30;}
.green {color: #1FCC16;}

.red-border {border: 1px solid #C23C15;}
.blue-border {border: 1px solid #1d84b5;}
.purple-border {border: 1px solid #8916CC;}
.orange-border {border: 1px solid #ff9f30;}
.green-border {border: 1px solid #1FCC16;}
.gray-border {border: 1px solid #e7e7e7;}


/******************************************************         Grid     */
.col-1 {width: 6.25%;}
.col-2 {width: 12.5%;}
.col-3 {width: 18.75%;}
.col-4 {width: 25%;}
.col-5 {width: 31.25%;}
.col-6 {width: 37.5%;}
.col-7 {width: 43.75%;}
.col-8 {width: 50%;}
.col-9 {width: 56.25%;}
.col-10 {width: 62.5%;}
.col-11 {width: 68.75%;}
.col-12 {width: 75%;}
.col-13 {width: 81.25%;}
.col-14 {width: 87.5%;}
.col-15 {width: 93.75%;}
.col-16 {width: 100%;}

/* LEFT offest */
.col-offset-16 {margin-left: 100%;}
.col-offset-15 {margin-left: 93.75%;}
.col-offset-14 {margin-left: 87.5%;}
.col-offset-13 {margin-left: 81.25%;}
.col-offset-12 {margin-left: 75%;}
.col-offset-11 {margin-left: 68.75%;}
.col-offset-10 {margin-left: 62.5;}
.col-offset-9 {margin-left: 56.25%;}
.col-offset-8 {margin-left: 50%;}
.col-offset-7 {margin-left: 43.75%;}
.col-offset-6 {margin-left: 37.5%;}
.col-offset-5 {margin-left: 31.25%;}
.col-offset-4 {margin-left: 25%;}
.col-offset-3 {margin-left: 18.75%;}
.col-offset-2 {margin-left: 12.5%;}
.col-offset-1 {margin-left: 6.25%;}
.col-offset-0 {margin-left: 0%;}

/* RIGHT offest */
.rcol-offset-16 {margin-right: 100%;}
.rcol-offset-15 {margin-right: 93.75%;}
.rcol-offset-14 {margin-right: 87.5%;}
.rcol-offset-13 {margin-right: 81.25%;}
.rcol-offset-12 {margin-right: 75%;}
.rcol-offset-11 {margin-right: 68.75%;}
.rcol-offset-10 {margin-right: 62.5;}
.rcol-offset-9 {margin-right: 56.25%;}
.rcol-offset-8 {margin-right: 50%;}
.rcol-offset-7 {margin-right: 43.75%;}
.rcol-offset-6 {margin-right: 37.5%;}
.rcol-offset-5 {margin-right: 31.25%;}
.rcol-offset-4 {margin-right: 25%;}
.rcol-offset-3 {margin-right: 18.75%;}
.rcol-offset-2 {margin-right: 12.5%;}
.rcol-offset-1 {margin-right: 6.25%;}
.rcol-offset-0 {margin-right: 0%;}

/******************************************************         Responsive     */

@media screen and (min-width:1100) {
    section {
        padding: 10rem 0 0 0;
    }
}

@media screen and (max-width:1140px) {
    .product-description {
        font-size:1.4em;
    }
}

@media screen and (max-width:1040px) {
    .product-description {
        font-size:1.2em;
    }
}

@media screen and (max-width:930px) {
    .product-title {
        font-size:2.5em;
    }
    .product-description {
        font-size:1em;
    }
}

@media screen and (max-width:800px) {
    .product-img {
/*      cannot change margin with one statement*/
        margin-top:2.5rem;
        margin-bottom: 2.5rem;
    }
    .product {
        padding:2.5rem 0;
    }
    .product-title {
        font-size:2em;
    }
}

@media screen and (max-width:750px) {
    section {
        padding:4rem 0;
        margin: 0 0;
    }
}

@media screen and (max-width:650px) {
    .me-img {
        width:75%;
    }
    .hidden-wrap {
        display:inline-block;
    }
    .medium-col-offset-2 {
        margin-left:12.5%;
    }
    .medium-col-12 {
        width:75%;
    }
    
    .rmedium-col-offset-2 {
        margin-right:12.5%;
    }
    .rmedium-col-12 {
        width:75%;
    }
    
    .product-img {
        margin-bottom: 1rem;
    }
    .product {
        padding:0 0 1rem 0;
    }
    .product-title {
        font-size: 2.3em;
    }
    .product-description {
        padding: 1rem 0;
        font-size: 1.2em;
    }
    
}

@media screen and (max-width:600px) {
    
}

@media screen and (max-width:500px) {
    .nav-name {
        clear:both;
        float:left;
        margin-right:0;
    }
    .product-title {
        font-size:1.3em;
    }
    
}

@media screen and (max-width:470px) {
    .navstyle {
        padding: 0 .6em;
    }
}

@media screen and (max-width:400px) {
    .navstyle {
        padding: 0 .4em;
    }
    
}

